@@ -39,7 +39,6 @@ rb-alt-click=Alt + click
 rb-attach-search-results-description=If enabled, clicking a search result will open an info page attached to the search GUI. Furthermore, clicking another search result will open it in that same page.\nYou can use the middle mouse button to open a detached info window at any time.
 rb-attach-search-results=Open search results in an attached info GUI
 rb-burned-in=Burned in
-rb-burner-machine=Burner machine
 rb-burnt-result=Burnt result
 rb-burnt-result-of=Burnt result of
 rb-captions=Captions
@@ -105,6 +104,7 @@ rb-jump-to-back=Jump to the back
 rb-jump-to-the-front=Jump to the front
 rb-lab=Lab
 rb-list-box-label=__1__ (__2__)
+rb-machine=Machine
 rb-made-in=Made in
 rb-max-rows=Max rows
 rb-middle-click=Middle click
