@@ -36,12 +36,11 @@ rb-object-has-no-page=O objeto não tem página no livro de receitas
 [gui]
 rb-add-to-favorites=Adicionar aos favoritos
 rb-alt-click=Alt + clique
-rb-attach-search-results-description=Se habilitado, clicar em um resultado de pesquisa abrirá uma página de informações anexada à interface de pesquisa. Além disso, clicar em outro resultado da pesquisa irá abri-lo na mesma página.\nVocê pode usar o botão do meio do mouse para abrir uma janela de informações separada a qualquer momento.
 rb-attach-search-results=Abra os resultados da pesquisa em uma interface de informações anexada
+rb-attach-search-results-description=Se habilitado, clicar em um resultado de pesquisa abrirá uma página de informações anexada à interface de pesquisa. Além disso, clicar em outro resultado da pesquisa irá abri-lo na mesma página.\nVocê pode usar o botão do meio do mouse para abrir uma janela de informações separada a qualquer momento.
 rb-burned-in=Queimado em
-rb-burner-machine=Maquina a combustão
-rb-burnt-result=Resultado da queima
 rb-burnt-result-of=Resultado da queima de
+rb-burnt-result=Resultado da queima
 rb-captions=Legendas
 rb-categories=Categorias
 rb-categories-description=Desmarque uma categoria para ocultar seus objetos das páginas de pesquisa e informações.\n[font=default-semibold]NOTA:[/font] Alguns objetos serão mostrados independentemente dessas configurações (ou seja, ingredientes e produtos da receita).
@@ -59,8 +58,8 @@ rb-compatible-resources=Recursos compatíveis
 rb-content=Conteúdo
 rb-control-click=Control + clique
 rb-crafter=Fabricante
-rb-crafting-time=Tempo de produção
 rb-crafting-time-desc=Quanto tempo leva para fazer esta receita por um fabricante com uma velocidade de fabricação de 1.
+rb-crafting-time=Tempo de produção
 rb-default-state=Estado padrão
 rb-default-temperature=Temperatura padrão
 rb-delete-favorites=Apagar favoritos
@@ -100,6 +99,7 @@ rb-jump-to-back=Pular para trás
 rb-jump-to-the-front=Pule para a frente
 rb-lab=Laboratório
 rb-list-box-label=__1__ (__2__)
+rb-machine=Maquina a combustão
 rb-made-in=Feito em
 rb-max-rows=Máximo de linhas
 rb-middle-click=Clique do meio
@@ -159,8 +159,8 @@ rb-search-type-internal=Interno
 rb-search-type-localised=Localizado
 rb-search-type=Tipo de busca
 rb-session-history=Histórico da sessão
-rb-settings-instruction=Configurações
 rb-settings=Configurações do livro de receitas
+rb-settings-instruction=Configurações
 rb-shift-click=Shift + clique
 rb-show-alternate-name-description=Mostre o nome "alternativo" do objeto em sua dica de ferramenta. Por padrão, este será o nome do protótipo do objeto. Se `mostrar nomes internos` estiver habilitado, este será o nome traduzido do objeto.
 rb-show-alternate-name=Mostrar nome alternativo
@@ -172,8 +172,8 @@ rb-show-disabled=Mostrar objetos desativados
 rb-show-fluid-temperatures-absolute-only=Absoluto apenas
 rb-show-fluid-temperatures-all=Tudo
 rb-show-fluid-temperatures-description=[font=default-semibold]Desligado:[/font] Variantes de temperatura do fluido não serão mostradas na pesquisa.\n[font=default-semibold] Apenas absoluto:[/font] Apenas as variantes de temperatura \"absolutas\" (fora do intervalo) serão mostradas na pesquisa.\n[font=default-semibold]Todas:[/font] Todas as variações de temperatura serão mostradas na pesquisa.
-rb-show-fluid-temperatures-off=Desligado
 rb-show-fluid-temperatures=Mostrar temperaturas de fluidos
+rb-show-fluid-temperatures-off=Desligado
 rb-show-glyphs=Mostrar glifos
 rb-show-hidden-description=Objetos \"ocultos\" são objetos que não aparecerão nas listas de seleção regulares, mas ainda podem interagir de outras maneiras.\n[font=default-semibold]NOTA:[/font] Alguns objetos ocultos serão mostrados independentemente desta configuração (ou seja, ingredientes e produtos da receita).
 rb-show-hidden=Mostrar objetos ocultos
