@@ -3,7 +3,6 @@ dictionary.set_use_local_storage(true)
 
 local constants = require("constants")
 
-local burner_machine_proc = require("scripts.processors.burner-machine")
 local burning_proc = require("scripts.processors.burning")
 local crafter_proc = require("scripts.processors.crafter")
 local equipment_category_proc = require("scripts.processors.equipment-category")
@@ -13,6 +12,7 @@ local fuel_category_proc = require("scripts.processors.fuel-category")
 local group_proc = require("scripts.processors.group")
 local item_proc = require("scripts.processors.item")
 local lab_proc = require("scripts.processors.lab")
+local machine_proc = require("scripts.processors.machine")
 local machine_state_proc = require("scripts.processors.machine-state")
 local mining_drill_proc = require("scripts.processors.mining-drill")
 local offshore_pump_proc = require("scripts.processors.offshore-pump")
@@ -48,8 +48,8 @@ function recipe_book.build()
   recipe_category_proc(recipe_book, dictionaries)
   resource_category_proc(recipe_book, dictionaries)
 
-  burner_machine_proc(recipe_book, dictionaries)
   crafter_proc(recipe_book, dictionaries, metadata)
+  machine_proc(recipe_book, dictionaries)
   mining_drill_proc(recipe_book, dictionaries)
 
   equipment_proc(recipe_book, dictionaries)
