@@ -5,10 +5,13 @@ Date: ????
     - Added new pages:
       - Equipment category: All equipment and items belonging to each category
       - Equipment: Size, take result, energy production, energy consumption, compatible fuels, fuel categories, equipment categories, and unlocked by for each equipment
+    - Added compatible equipment and equipment categories to the item page
     - Added fuel categories to burner machine page
     - Shift + click on a recipe with one product to view the product's page
     - Using the inspect hotkey will attempt to open the info page relative to the currently open GUI
       - Only works on vanilla GUIs (custom mod GUIs do not support relative anchoring)
+  Changes:
+    - Renamed 'burner machine' to 'machine'
   Bugfixes:
     - Fixed a crash if a prototype (somehow) doesn't have a stored translation (#80)
     - Fixed that mining drills were not being processed for technology unlocks
